--- a/src/app/tabs/upcoming/upcoming.component.scss
+++ b/src/app/tabs/upcoming/upcoming.component.scss
@@ -81,6 +81,11 @@
         font-weight: 400;
       }
     }
+    // .task-info {
+    //   .task-info-item {
+    //     margin-bottom: format(20);
+    //   }
+    // }
   }
 }
 
