--- a/src/app/pages/carte/carte.component.html
+++ b/src/app/pages/carte/carte.component.html
@@ -1,6 +1,6 @@
 <ion-header class="custom-header">
   <swipe-header class="custom-header-component" title="添加名片" [isBack]="false" [customRight]="true">
-    <span (click)="openMenuInfo()" name="right" class="other-btn">选择名片</span>
+    <span (click)="openMenuInfo()" name="right" class="other-btn">{{ (_businessConfig && _businessConfig.selected) ? _businessConfig.businessName : '选择名片'}}</span>
   </swipe-header>
 </ion-header>
 
