--- a/src/app/pages/task/task-info/task-order-information/task-order-information.component.html
+++ b/src/app/pages/task/task-info/task-order-information/task-order-information.component.html
@@ -5,15 +5,15 @@
     </section>
     <section class="upload-info">
       <span class="label-text">任意浏览信息，上传图片</span>
-      <swipe-upload></swipe-upload>
-      <ng-container *ngIf="isLast">
-        <section class="custom-input">
+      <swipe-upload [maxFileListLength]="3" [(ngModel)]="imagesVos" (ngModelChange)="imagesVosChange()"></swipe-upload>
+      <ng-container>
+        <section class="custom-input" *ngIf="(renderInfo.stepSubjoinItem || '').includes('ORDER_NO')">
           <!-- [(value)]="loginForm.credential" -->
-          <swipe-input [(ngModel)]="submitTaskForm.orderNo" type="text" placeholder="请输入订单号" [pattern]="'^[0-9a-z]{6,20}$'" [isClear]="true" [isRequired]="true" (onBlur)="taskFormChange()"></swipe-input>
+          <swipe-input [(ngModel)]="submitTaskForm.orderNo" type="number" placeholder="请输入订单号" [isClear]="true" [isRequired]="true" (onBlur)="taskFormChange()"></swipe-input>
         </section>
-        <section class="custom-input">
+        <section class="custom-input" *ngIf="(renderInfo.stepSubjoinItem || '').includes('PAID_AMOUNT')">
           <!-- [(value)]="loginForm.credential" -->
-          <swipe-input [(ngModel)]="submitTaskForm.paidAmount" type="text" placeholder="请输入实际付款金额" [pattern]="'^[0-9a-z]{6,20}$'" [isClear]="true" [isRequired]="true" (onBlur)="taskFormChange()"></swipe-input>
+          <swipe-input [(ngModel)]="submitTaskForm.paidAmount" type="number" placeholder="请输入实际付款金额" [isClear]="true" [isRequired]="true" (onBlur)="taskFormChange()"></swipe-input>
         </section>
       </ng-container>
     </section>
