--- a/src/app/tabs/task/submit-rights/submit-rights.component.html
+++ b/src/app/tabs/task/submit-rights/submit-rights.component.html
@@ -30,7 +30,7 @@
             </section>
             <section class="handler-info">
               <span class="title-text">上传截图</span>
-              <swipe-upload></swipe-upload>
+              <swipe-upload [(ngModel)]="appealConfig.screenshot"></swipe-upload>
             </section>
           </section>
         </swipe-task-info-cell>
