--- a/src/app/pages/carte/step2/step2.page.html
+++ b/src/app/pages/carte/step2/step2.page.html
@@ -18,6 +18,7 @@
       [isBorder]="false"
       type="text"
       placeholder="请备注关系+姓名"
+      [isCheck]="false"
       [isPrefix]="true"
       [isClear]="true"
       [isRequired]="true"
