--- a/src/app/pages/components/business-info/business-info.component.html
+++ b/src/app/pages/components/business-info/business-info.component.html
@@ -19,7 +19,7 @@
       </section>
       <section class="platform-item">
         <span class="label-text">买号：</span>
-        <input class="code-input" type="text" [(ngModel)]="nickname" placeholder="请输入要搜索的买号"/>
+        <input class="code-input" type="text" [(ngModel)]="businessConfig.nickname" placeholder="请输入要搜索的买号"/>
       </section>
     </section>
     <section class="btn-group">
