--- a/src/app/tabs/upcoming/task-info-cell/task-info-cell.component.html
+++ b/src/app/tabs/upcoming/task-info-cell/task-info-cell.component.html
@@ -14,11 +14,11 @@
         <section class="infos-item">
           <span class="label-text">任务押金</span>
 
-          <span class="value-text light">{{renderInfo.unitPrice}}元</span>
+          <span class="value-text light">{{renderInfo.unitPrice|price:'format'}}元</span>
         </section>
         <section class="infos-item">
           <span class="label-text">任务奖励</span>
-          <span class="value-text light">{{renderInfo.award}}元</span>
+          <span class="value-text light">{{renderInfo.award|price:'format'}}元</span>
         </section>
       </section>
     </section>
