--- a/src/app/pages/carte/step1/step1.page.html
+++ b/src/app/pages/carte/step1/step1.page.html
@@ -7,6 +7,7 @@
       placeholder="请输入您的名片ID"
       [isPrefix]="true"
       [isSuffix]="true"
+      [isCheck]="false"
       [isClear]="true"
       [isRequired]="true">
       <span class="label-text" name="prefix">名片ID：</span>
