--- a/src/app/pages/user/change-pwd/change-pwd.page.html
+++ b/src/app/pages/user/change-pwd/change-pwd.page.html
@@ -1,20 +1,22 @@
 <ion-header class="custom-header">
-  <swipe-header class="custom-header-component" title="提现申请" [isBack]="true"></swipe-header>
+  <swipe-header class="custom-header-component" title="修改密码" [isBack]="true"></swipe-header>
 </ion-header>
 
 <ion-content class="change-pdw-page">
-  <section class="form-model">
-    <section class="custom-input">
-      <swipe-input [(ngModel)]="registerForm.old_password" type="password" placeholder="请输入原密码" [isClear]="true"></swipe-input>
+  <form [formGroup]="validateForm" (ngSubmit)="submitChange()">
+    <section class="form-model">
+      <section class="custom-input">
+        <swipe-input formControlName="credential" type="text" placeholder="请输入原密码" [isClear]="true"></swipe-input>
+      </section>
+      <section class="custom-input">
+        <swipe-input formControlName="newCredential" type="text" placeholder="请输入登录密码" [isClear]="true"></swipe-input>
+      </section>
+      <section class="custom-input">
+        <swipe-input formControlName="checkPassword" type="text" placeholder="请重新输入密码" [isClear]="true"></swipe-input>
+      </section>
     </section>
-    <section class="custom-input">
-      <swipe-input [(ngModel)]="registerForm.password" type="password" placeholder="请输入登录密码" [isClear]="true"></swipe-input>
+    <section class="submit-info">
+      <ion-button type="submit" class="submit-btn" expand="block" color="primary">确认提交</ion-button>
     </section>
-    <section class="custom-input">
-      <swipe-input [(ngModel)]="registerForm.check_password" type="password" placeholder="请重新输入密码" [isClear]="true"></swipe-input>
-    </section>
-  </section>
-  <section class="submit-info">
-    <ion-button class="submit-btn" expand="block" color="primary">确认提交</ion-button>
-  </section>
+  </form>
 </ion-content>
